Рефакторинг url методов message add/edit/delete
